- port common to Java 8 - add 1_16, a backport of 1_17 - call common1_19_4's MinepkgCompanion directly from common using reflection, replacing the client/server entrypoints - update Glue to 0.0.7 - remove "mixins" from fabric.mod.json, load them manually in GluePreLaunch instead